# rinha-backend-2024-q1

./: .bazelrc  .gitignore  1  @  BUILD  CMakeLists.txt  CMakePresets.json  README.md  WORKSPACE  client.cpp  client.h  client_repository.cpp  client_repository.h  client_service.cpp  client_service.h  compile  conan_toolchain.cmake  conanbuild.sh  conanbuildenv-release-x86_64.sh  conanfile.txt  conanrun.sh  conanrunenv-release-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh  libpqxx.BUILD  main.cpp  transaction.h
database/: schema.sql
main/: BUILD  client.cpp  client.h  client_repository.h  client_service.cpp  client_service.h  main.cpp
model/: BUILD  client.cpp  client.h  client_repository.cpp
openssl/: BUILD.bazel  BUILD.openssl.bazel
proto/: BUILD  rinha.proto
qtl/: BUILD
